Fix after merge